# xistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
ai/: accounts.txt  main.py  pyproject.toml  requirements2.txt
ai/ai/: my_ai.py
ai/my-ai/: main.py
ai/plugins/: devotionals.py  german_ai_output_parser.py  german_teacher.py  german_word_generator.py  internet_search.py  my_coding_projects.py  my_movie_preference.py  parenting_tips.py  rhasspy_output_parser.py
ai/utils/: output_parser.py
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  build.sh  docker-stack.yaml  pyproject.toml
backend/ai/: __init__.py  main.py  output_parser.py
backend/api/: json_web_token.py  main.py
backend/config/: config.py
backend/data/devotionals/: previous_chapter.txt
backend/data/food_to_cook/: food_i_eat.txt  last_series_of_food_i_ate.txt
backend/data/german_words/: german_phrases.txt  german_words.txt  used_words.txt
backend/data/parenting_tips/: used_links.txt
backend/plugins/: a1_german_teacher.py  chat_gpt.py  convo.py  devotionals.py  energy_consumption_manager.py  food_to_cook.py  german_ai_output_parser.py  german_word_generator.py  gty_devotionals.py  langchain_quick_tools.py  my_grocery_manager.py  parenting_tips.py  rhasspy_output_parser.py  talker.py  used_words_practice.py
clients/mobile/: .env.production  .gitignore  index.html  package.json  vite.config.js
clients/raycast/: CHANGELOG.md  README.md  package.json
xmile/: xmile.py
xmile.egg-info/: PKG-INFO  SOURCES.txt
(+12 files in other folders)
