[tool.poetry]
name = "xmile"
version = "2.0.2"
description = "Internal package"
authors = ["Uyi <uyi@uyi.com>"]
license = "MIT"
homepage = "https://github.com/authorname/templatepackage"

[tool.poetry.dependencies]
python = ">=3.9"
psycopg2 = "2.9.6"
anyio = "3.6.2"
fastapi = "0.95.0"
idna = "3.4"
psycopg2-binary = "2.9.6"
pydantic = "1.10.7"
sniffio = "1.3.0"
starlette = "0.26.1"
typing-extensions = "4.5.0"

[tool.poetry.dependencies.setuptools]
version = "*"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
